--- a/app/src/main/res/layout/activity_registro_ayunas.xml
+++ b/app/src/main/res/layout/activity_registro_ayunas.xml
@@ -295,7 +295,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText"
-        android:layout_below="@+id/textView5"
         android:layout_toEndOf="@+id/textView6"
         android:hint="glucosa"
         android:background="#e9e9e9"
@@ -306,7 +305,9 @@
         android:height="80px"
         android:width="210px"
         android:textSize="48px"
-        android:textStyle="normal" />
+        android:textStyle="normal"
+        android:layout_alignTop="@+id/textView3"
+        android:layout_above="@+id/textView4" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -323,7 +324,8 @@
         android:height="80px"
         android:width="210px"
         android:textSize="48px"
-        android:textStyle="normal" />
+        android:textStyle="normal"
+        android:layout_alignTop="@+id/textView16" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -340,7 +342,8 @@
         android:height="80px"
         android:width="210px"
         android:textSize="48px"
-        android:textStyle="normal" />
+        android:textStyle="normal"
+        android:layout_below="@+id/textView6" />
 
 
     <Spinner
